# MakerAgents

./: .gitignore  .mise.toml  AGENTS.md  PRD.md  README.md  pyproject.toml
src/makeragents/: __init__.py  cli.py  config.py  orchestrator.py  overrides.py  prompts.py  retry.py  run.py  schemas.py  scoring.py
src/makeragents/agents/: __init__.py  cost_checker.py  evidence.py  maker.py  mediator.py  opportunity.py  report.py  research.py  taker.py
src/makeragents/data/: source-registry.yaml
src/makeragents/data/prompts/: cost_checker.md  evidence.md  maker.md  mediator.md  opportunity.md  research.md  taker.md
src/makeragents/llm/: __init__.py  client.py
src/makeragents/search/: __init__.py  client.py  providers.py
src/makeragents/sources/: __init__.py  registry.py
tests/: conftest.py  test_cli.py  test_config.py  test_cost_checker.py  test_evidence_agent.py  test_llm_client.py  test_maker_agent.py  test_mediator_agent.py  test_opportunity_agent.py  test_opportunity_artifact_layout.py  test_orchestrator.py  test_overrides.py  test_prompts.py  test_registry.py  test_report_agent.py  test_research_agent.py  test_retry.py  test_run.py  test_schemas.py  test_scoring.py  test_search.py  test_taker_agent.py
