[project]
name = "makeragents"
version = "0.1.0"
description = "Local-first community opportunity research schemas and configuration."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph==1.2.6",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "typer==0.26.7",
]

[project.scripts]
maker = "makeragents.cli:app"

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/makeragents"]
include = ["src/makeragents/data/*.yaml"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
