[project]
name = "makeragents"
version = "0.1.0"
description = "Local-first community opportunity research schemas and configuration."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "ddgs==9.14.4",
    "httpx==0.28.1",
    "langgraph==1.2.6",
    "pydantic==2.13.4",
    "pyyaml==6.0.3",
    "typer==0.26.7",
]

[project.scripts]
maker = "makeragents.cli:app"

[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/makeragents"]
include = ["src/makeragents/data/*.yaml", "src/makeragents/data/prompts/*.md"]

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: live network tests, skipped by default",
]
